# PlayersManager

./: CMakeLists.txt  Group.cpp  Group.h  GroupNode.cpp  GroupNode.h  LevelNode.cpp  LevelNode.h  Player.cpp  Player.h  PlayerNode.cpp  PlayerNode.h  PlayersManager.cpp  PlayersManager.h  PlayersManagerExceptions.cpp  PlayersManagerExceptions.h  RankTree.cpp  RankTree.h  library1.cpp  main.h
input/: sagiv_output_1.txt  sagiv_output_10.txt  sagiv_output_11.txt  sagiv_output_12.txt  sagiv_output_13.txt  sagiv_output_14.txt  sagiv_output_15.txt  sagiv_output_16.txt  sagiv_output_17.txt  sagiv_output_18.txt  sagiv_output_19.txt  sagiv_output_2.txt  sagiv_output_3.txt  sagiv_output_4.txt  sagiv_output_5.txt  sagiv_output_6.txt  sagiv_output_7.txt  sagiv_output_8.txt  sagiv_output_9.txt  testfile1.txt  testfile10.txt  testfile11.txt  testfile12.txt  testfile13.txt  testfile14.txt  testfile15.txt  testfile16.txt  testfile17.txt  testfile18.txt  testfile19.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile6.txt  testfile7.txt  testfile8.txt  testfile9.txt
wet1_tests/: input_0.txt  input_1.txt  input_10.txt  input_11.txt  input_12.txt  input_13.txt  input_14.txt  input_15.txt  input_16.txt  input_17.txt  input_18.txt  input_19.txt  input_2.txt  input_20.txt  input_21.txt  input_22.txt  input_23.txt  input_24.txt  input_25.txt  input_26.txt  input_27.txt  input_28.txt  input_29.txt  input_3.txt  input_30.txt  input_31.txt  input_32.txt  input_33.txt  input_34.txt  input_35.txt  input_36.txt  input_37.txt  input_38.txt  input_39.txt  input_4.txt  input_40.txt  (+65 more)
