cmake_minimum_required(VERSION 3.0)
project(Wet1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Wet1 main.cpp AVLTree.cpp AVLTree.h EmptyNode.cpp EmptyNode.h Group.cpp Group.h GroupNode.cpp GroupNode.h LevelNode.cpp LevelNode.h library1.cpp library1.h Node.cpp Node.h Player.cpp Player.h PlayerNode.h PlayerNode.cpp PlayersManager.cpp PlayersManager.h PlayersManagerExceptions.cpp PlayersManagerExceptions.h TreeExceptions.cpp TreeExceptions.h main.cpp main.h library1.h RankTree.cpp RankTree.h)
